--- a/CSS - Net Ninja/articles.html
+++ b/CSS - Net Ninja/articles.html
@@ -3,42 +3,97 @@
 <html>
 
     <head>
-        <title>CSS For Beginners</title>
+        <title>articles - CSS For Beginners</title>
         <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
     </head>
 
     <body>
-        <div id="header">
-            <h1>Articles</h1>
+
+        <div>
+            <article class="featured-content">
+                <p>Something</p>
+            </article>
+
+            <article>
+                <p>Something2</p>
+            </article>
+            
+            <div class="featured-content">
+              <img src="#">
+            </div>
+
+            <div="featured-content">
+                <img src="#">
+            </div>
+
+
         </div>
 
-        <div id="all-articles">
-            <h1> Most Recent Articles</h1>
+
+
+        <div>
+            <h1>Articles</h1>
+
                 <article>
                     <h2> Article title</h2>
                     <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p>                    </p>
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil. 
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                    </p>
                     <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p> 
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil. 
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                    </p>
                     <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p> 
-                    <p>To read more click <a href="#">here</a></p> 
-                    <hr>
-                </article>
-            
-                <article>
-                    <h2> Article 2 title</h2>
-                    <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p>                    </p>
-                    <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p> 
-                    <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
-                    cie trzeba cenic ten tylko sie dowie, kto cie stracil</p> 
-                    <p>To read more click <a href="#">here</a></p> 
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil. 
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                        Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                        cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                    </p>
+                    To read more click <a href="#">here</a>
+                    </p> 
                     <hr>
                 </article>
 
+
+            <article>
+                <h2> Article title 2</h2>
+                <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                    cie trzeba cenic ten tylko sie dowie, kto cie stracil. 
+                    Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                    cie trzeba cenic ten tylko sie dowie, kto cie stracil.
+                    Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                    cie trzeba cenic ten tylko sie dowie, kto cie stracil.            
+                </p>
+                    <BR>
+                To read more click <a href="#">here</a>
+                </p> 
+                <hr>
+            </article>
+
+            <article>
+                <h2> Article title 3</h2>
+                <p>Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                cie trzeba cenic ten tylko sie dowie, kto cie stracil.                
+                Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                cie trzeba cenic ten tylko sie dowie, kto cie stracil
+                Litwo, ojczyzno moja, ty jestes jak zdrowie, ile
+                cie trzeba cenic ten tylko sie dowie, kto cie stracil
+                </p>
+                <BR>
+                To read more click <a href="#">here</a>
+                <hr>
+            </article>
+
+            <hr>
 
             <h2> Article #2</h2>
             <p>Published by Marcin</p>
