--- a/CSS - Net Ninja/contact.html
+++ b/CSS - Net Ninja/contact.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>CSS For Beginners</title>
+        <title>contact - CSS For Beginners</title>
         <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
     </head>
