--- a/CSS - Net Ninja/index.html
+++ b/CSS - Net Ninja/index.html
@@ -4,7 +4,7 @@
 
 
 <head>
-    <title>CSS For Beginners</title>
+    <title>index - CSS For Beginners</title>
    <link rel="stylesheet" type="text/css" href="css/syntax.css">
 
 </head>
@@ -12,13 +12,26 @@
 
 <body>
 
+    <div id="main-content">
+        <h1>CSS For Baggginers</h1>
+        <div class="box">This is the content 1</div>
+        <div class="box">This is the content 2</div>
+
+    </div>
+
     <p class="welcome">Welcome!!</p>
+
 
     <div id="header">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website</p>
     </div>
+
+    <A HREF="#">This is a link 1</A>
+    <A HREF="#">This is a link 2</A>
+    <A HREF="#">This is a link 3</A>
+    <A HREF="#">This is a link 4</A>
 
     <p>Hello cyclists!</p>
     <p>Hello cyclists!</p>
