--- a/CSS - Net Ninja/index.html
+++ b/CSS - Net Ninja/index.html
@@ -14,14 +14,60 @@
 
     <div id="main-content">
         <h1>CSS For Baggginers</h1>
+        <div class="static-width">Statix Pixel Width</div>
+        <div class="percentage-width">Percentage width</div>
+        <div class="inline-block">inline-block</div>
+        <div class="inline-block">inline-block</div>
+        <BR><BR>
+
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+
+
+        <h2>Block Level Elements</h2>
+        <div class="block">Block level elements 1</div>
+        <div class="block">Block level elements 2</div>
+        <div class="block">Block level elements 3</div>
+        <h2>Inline Elements</h2>
+        <span class="inline">Inline element 1</span>
+        <span class="inline">Inline element 2</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+        <span class="inline">Inline element 3</span>
+
+        <BR><BR><BR>
+
         <div class="box">This is the content 1</div>
-        <div class="box">This is the content 2</div>
+        <div class="box dashed">dashed</div>
+        <div class="box dotted">dotted</div>
+        <div class="box double">double</div>
+        <div class="box groove">groove</div>
+        <div class="box inset">inset</div>
+        <div class="box outset">outset</div>
+        <div class="box ridge">ridge</div>
+        <div class="box solid">solid</div>
 
     </div>
 
     <p class="welcome">Welcome!!</p>
 
-
+    <BR><BR><BR><BR><BR>
     <div id="header">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
