--- a/CSS - Net Ninja/index.html
+++ b/CSS - Net Ninja/index.html
@@ -14,6 +14,17 @@
 
     <div id="main-content">
         <h1>CSS For Baggginers</h1>
+
+        <a class="button">Click me</a>
+        <BR><BR><BR>
+
+        <div id="circle">Hello</div>
+        <div id="circle-2">Hello-2</div>
+        <div id="circle-3">Hello-3</div>
+
+        <div id="banner"></div>
+
+
         <div class="static-width">Statix Pixel Width</div>
         <div class="percentage-width">Percentage width</div>
         <div class="inline-block">inline-block</div>
